--- a/C2 A Brief Introduction to Logic Circuits and Verilog HDL/code_test/code_test.sim/sim_1/behav/xsim/xsim.dir/counter_test_behav/xsimSettings.ini
+++ b/C2 A Brief Introduction to Logic Circuits and Verilog HDL/code_test/code_test.sim/sim_1/behav/xsim/xsim.dir/counter_test_behav/xsimSettings.ini
@@ -1,8 +1,8 @@
 [General]
-ARRAY_DISPLAY_LIMIT=512
+ARRAY_DISPLAY_LIMIT=1024
 RADIX=hex
 TIME_UNIT=ns
-TRACE_LIMIT=2147483647
+TRACE_LIMIT=65536
 VHDL_ENTITY_SCOPE_FILTER=true
 VHDL_PACKAGE_SCOPE_FILTER=false
 VHDL_BLOCK_SCOPE_FILTER=true
@@ -25,11 +25,11 @@ INOUT_PROTOINST_FILTER=true
 INTERNAL_PROTOINST_FILTER=true
 CONSTANT_PROTOINST_FILTER=true
 VARIABLE_PROTOINST_FILTER=true
-SCOPE_NAME_COLUMN_WIDTH=226
-SCOPE_DESIGN_UNIT_COLUMN_WIDTH=133
+SCOPE_NAME_COLUMN_WIDTH=294
+SCOPE_DESIGN_UNIT_COLUMN_WIDTH=201
 SCOPE_BLOCK_TYPE_COLUMN_WIDTH=117
-OBJECT_NAME_COLUMN_WIDTH=109
-OBJECT_VALUE_COLUMN_WIDTH=87
+OBJECT_NAME_COLUMN_WIDTH=130
+OBJECT_VALUE_COLUMN_WIDTH=58
 OBJECT_DATA_TYPE_COLUMN_WIDTH=89
 PROCESS_NAME_COLUMN_WIDTH=75
 PROCESS_TYPE_COLUMN_WIDTH=75
